--- a/docs/assets/css/utils.css
+++ b/docs/assets/css/utils.css
@@ -35,7 +35,7 @@
 }
 
 .tooltip_templates {
-    /* display: none; */
+    display: none;
 }
 
 [data-md-color-scheme="slate"] .tooltipster-sidetip .tooltipster-box {
